# elasticsearch-api

./: .gitignore  README.md  pyproject.toml
articles/: admin.py  documents.py  models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
config/: settings.py  urls.py
