[tool.poetry]
name = "elasticsearch-api"
version = "0.1.0"
description = ""
authors = ["tony <dev.autumnsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.0"
djangorestframework = "^3.13.1"
django-elasticsearch-dsl = "^7.2.1"
django-elasticsearch-dsl-drf = "^0.22.2"
django-seed = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
